--- a/templates/index.html
+++ b/templates/index.html
@@ -37,10 +37,10 @@
     <form method="POST">
         <input type="number" name="num1" placeholder="Número 1" required>
         <select name="operacao">
-            <option value="+">+</option>
-            <option value="-">-</option>
-            <option value="*">x</option>
-            <option value="/">/</option>
+            <option value="soma">+</option>
+            <option value="subtracao">-</option>
+            <option value="multiplicacao">x</option>
+            <option value="divisao">÷</option>
         </select>
 
         <input type="number" name="num2" placeholder="Número 2" required>
